--- a/WebsiteDesign/css/style.css
+++ b/WebsiteDesign/css/style.css
@@ -1,6 +1,1 @@
-html {
-  background-image: url("/img/Barbershop front view.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-/*# sourceMappingURL=style.css.map */
+/* No CSS *//*# sourceMappingURL=style.css.map */
